--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,12 @@
     transform: rotate(360deg);
   }
 }
+
+h1{
+  padding: .66rem 0;
+  text-align: center;
+  background-color: #cca353;
+  font-family: Poppins,sans-serif;
+  font-size: 1.8rem;
+  color: #fff;
+  }
